--- a/clients/src/web/styles/map/tools/print.css
+++ b/clients/src/web/styles/map/tools/print.css
@@ -11,6 +11,7 @@
   left: 0;
   pointer-events: none;
   transition: 0.45s padding cubic-bezier(0.25, 0.8, 0.25, 1) 0s;
+  z-index: 40;
 }
 
 .print-preview-bg {
